--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -76,6 +76,7 @@
       org.apache.camel.spi.ComponentResolver;component=validator,
       org.apache.camel.spi.ComponentResolver;component=vm,
       org.apache.camel.spi.ComponentResolver;component=xslt,
+      org.apache.camel.spi.DataFormatResolver;dataformat=gzip,
       org.apache.camel.spi.DataFormatResolver;dataformat=serialization,
       org.apache.camel.spi.DataFormatResolver;dataformat=string,
       org.apache.camel.spi.DataFormatResolver;dataformat=zip,
