--- a/components/camel-gae/pom.xml
+++ b/components/camel-gae/pom.xml
@@ -15,7 +15,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -30,18 +31,18 @@
   <description>Camel GAE support</description>
 
   <properties>
-        <camel.osgi.import.before.defaults>
-            javax.servlet.*;version="${servlet-version-range}"
-        </camel.osgi.import.before.defaults>
-	<camel.osgi.export.pkg>org.apache.camel.component.gae.*</camel.osgi.export.pkg>
-	<camel.osgi.export.service>
-		org.apache.camel.spi.ComponentResolver;component=gauth,
-		org.apache.camel.spi.ComponentResolver;component=ghttp,
-		org.apache.camel.spi.ComponentResolver;component=ghttps,
-		org.apache.camel.spi.ComponentResolver;component=glogin,
-		org.apache.camel.spi.ComponentResolver;component=gmail,
-		org.apache.camel.spi.ComponentResolver;component=gtask
-	</camel.osgi.export.service>
+    <camel.osgi.import.before.defaults>
+      javax.servlet.*;version="${servlet-version-range}"
+    </camel.osgi.import.before.defaults>
+    <camel.osgi.export.pkg>org.apache.camel.component.gae.*</camel.osgi.export.pkg>
+    <camel.osgi.export.service>
+      org.apache.camel.spi.ComponentResolver;component=gauth,
+      org.apache.camel.spi.ComponentResolver;component=ghttp,
+      org.apache.camel.spi.ComponentResolver;component=ghttps,
+      org.apache.camel.spi.ComponentResolver;component=glogin,
+      org.apache.camel.spi.ComponentResolver;component=gmail,
+      org.apache.camel.spi.ComponentResolver;component=gtask
+    </camel.osgi.export.service>
   </properties>
 
   <dependencies>
@@ -134,15 +135,15 @@
     </dependency>
   </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <forkCount>1</forkCount>
-		    <reuseForks>false</reuseForks>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
