--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -87,8 +87,8 @@
     <castor-version>1.3.3</castor-version>
     <castor-bundle-version>1.3.3_1</castor-bundle-version>
     <cdi-api-version>1.1</cdi-api-version>
-    <cglib-bundle-version>2.1_3_7</cglib-bundle-version>
-    <cglib-version>2.2</cglib-version>
+    <cglib-bundle-version>3.1_1</cglib-bundle-version>
+    <cglib-version>3.1</cglib-version>
     <chunk-templates-version>3.0.1</chunk-templates-version>
     <classmate-version>1.2.0</classmate-version>
     <cmis-version>0.13.0</cmis-version>
