--- a/components/camel-olingo2/camel-olingo2-component/pom.xml
+++ b/components/camel-olingo2/camel-olingo2-component/pom.xml
@@ -104,8 +104,57 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>olingo-odata2-api-annotation</artifactId>
+      <version>${olingo2-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>olingo-odata2-annotation-processor-api</artifactId>
+      <version>${olingo2-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.olingo</groupId>
+      <artifactId>olingo-odata2-annotation-processor-core</artifactId>
+      <version>${olingo2-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+      <version>${cxf-version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-servlet</artifactId>
+      <version>${jetty9-version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-server</artifactId>
+      <version>${jetty9-version}</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.jetty.orbit</groupId>
+          <artifactId>javax.servlet</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.eclipse.jetty</groupId>
+      <artifactId>jetty-webapp</artifactId>
+      <version>${jetty9-version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -178,6 +227,26 @@
         </executions>
       </plugin>
 
+      <!-- add the olingo odata2 sample service source. See profile get-olingo2-sample below --> 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>add-test-source</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>${basedir}/target/olingo2-my-car-service/src/main/java</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
     <pluginManagement>
@@ -214,4 +283,58 @@
     </plugins>
   </reporting>
 
+  <profiles>
+    <profile>
+      <!-- REVISIT as of now, the olingo odata2 sample service that is used in the tests 
+           is not available in nexus and needs to be generated and built using its architype plugin.
+           If the sample service jar becomes available, we can use it directly -->
+      <id>get-olingo2-sample</id>
+      <activation>
+        <file>
+          <missing>${basedir}/target/olingo2-my-car-service</missing>
+        </file>
+        <!-- the above condition is evaluated prior to the mvn execution and consequently
+             it evaluates to false when "mvn clean install" is invoked while the folder exists,
+             which is correct, yet unfortunate, as the clean phase will remove the folder and
+             subsequently the source folder is not created.
+             So, we need activate this profle by default and set -fn option to the mvn below to
+             ignore the duplicate error ;-((
+        -->
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-sources</id>
+                <phase>generate-test-sources</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <executable>mvn</executable>
+              <workingDirectory>${basedir}/target</workingDirectory>
+              <arguments>
+                <argument>archetype:generate</argument>
+                <argument>-q</argument>
+                <argument>-fn</argument>
+                <argument>-DinteractiveMode=false</argument>
+                <argument>-Dversion=${project.version}</argument>
+                <argument>-DgroupId=org.apache.camel</argument>
+                <argument>-DartifactId=olingo2-my-car-service</argument>
+                <argument>-DarchetypeGroupId=org.apache.olingo</argument>
+                <argument>-DarchetypeArtifactId=olingo-odata2-sample-cars-annotation-archetype</argument>
+                <argument>-DarchetypeVersion=${olingo2-version}</argument>
+              </arguments>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
