--- a/components/camel-scr/pom.xml
+++ b/components/camel-scr/pom.xml
@@ -30,8 +30,7 @@
   <packaging>bundle</packaging>
 
   <properties>
-    <camel.osgi.export.pkg>org.apache.camel.scr.*</camel.osgi.export.pkg>
-    <camel.osgi.import.camel.version>version="[2.12,$(version;=+;${camel.osgi.version.clean}))"</camel.osgi.import.camel.version>
+    <camel.osgi.export.pkg>org.apache.camel.scr</camel.osgi.export.pkg>
   </properties>
 
   <dependencies>
