--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -196,6 +196,7 @@
     <grizzly-websockets-version>2.3.21</grizzly-websockets-version>
     <groovy-version>2.4.4</groovy-version>
     <gson-version>2.3.1</gson-version>
+    <guice3-version>3.0</guice3-version>
     <guice-version>4.0</guice-version>
     <guice-bundle-version>3.0_1</guice-bundle-version>
     <hadoop-bundle-version>1.2.1_1</hadoop-bundle-version>
@@ -256,7 +257,7 @@
     <jboss-marshalling-version>1.4.10.Final</jboss-marshalling-version>
     <jclouds-version>1.9.0</jclouds-version>
     <!-- jclouds must use this guava version -->
-    <jclouds-google-guava-version>16.0</jclouds-google-guava-version>
+    <jclouds-google-guava-version>16.0.1</jclouds-google-guava-version>
     <jclouds-google-guava-version-range>[16.0,17.0)</jclouds-google-guava-version-range>
     <jcr-version>2.0</jcr-version>
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
