--- a/components/pom.xml
+++ b/components/pom.xml
@@ -225,6 +225,7 @@
     <module>camel-syslog</module>
     <module>camel-swagger</module>
     <module>camel-tagsoup</module>
+    <module>camel-tarfile</module>
     <module>camel-twitter</module>
     <module>camel-undertow</module>
     <module>camel-univocity-parsers</module>
