--- a/components/camel-cxf/pom.xml
+++ b/components/camel-cxf/pom.xml
@@ -367,6 +367,9 @@
                   <wsdl>${basedir}/src/test/resources/person.wsdl</wsdl>
                 </wsdlOption>
                 <wsdlOption>
+                  <wsdl>${basedir}/src/test/resources/order.wsdl</wsdl>
+                </wsdlOption>
+                <wsdlOption>
                   <wsdl>${basedir}/src/test/resources/person-non-wrapper.wsdl</wsdl>
                   <extraargs>
                     <extraarg>-b</extraarg>
