--- a/components/camel-spring-redis/pom.xml
+++ b/components/camel-spring-redis/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
         	<groupId>redis.clients</groupId>
         	<artifactId>jedis</artifactId>
-        	<version>2.6.3</version>
+        	<version>${jedis-client-version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
