--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -255,6 +255,7 @@
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
     <jdom-version>1.1.3</jdom-version>
     <jedis-client-bundle-version>2.7.1_1</jedis-client-bundle-version>
+    <jedis-client-version>2.6.3</jedis-client-version>
     <jetty6-bundle-version>6.1.26_4</jetty6-bundle-version>
     <jetty6-version>6.1.26</jetty6-version>
     <jetty8-version>8.1.17.v20150415</jetty8-version>
