--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -264,6 +264,7 @@
     <jcr-version>2.0</jcr-version>
     <jdom-bundle-version>1.1_4</jdom-bundle-version>
     <jdom-version>1.1.3</jdom-version>
+    <jedis-client-version>2.6.3</jedis-client-version>
     <jedis-client-bundle-version>2.7.3_1</jedis-client-bundle-version>
     <jersey-version>2.11</jersey-version>
     <jetty6-bundle-version>6.1.26_4</jetty6-bundle-version>
