--- a/test-infra/pom.xml
+++ b/test-infra/pom.xml
@@ -95,6 +95,7 @@
         <module>camel-test-infra-neo4j</module>
         <module>camel-test-infra-weaviate</module>
         <module>camel-test-infra-ibmmq</module>
+        <module>camel-test-infra-docling</module>
         <module>camel-test-infra-all</module>
     </modules>
 
